// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Div checkGrammar=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkGrammar=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkHighlight=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkHighlight=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkSpaces=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkSpaces=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div className="my-classname" 1`] = `
<div
  className="uu5-common-div my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div className="test-classname" 1`] = `
<div
  className="uu5-common-div test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Div content=12345 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Div controlled=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div controlled=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div default props 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div disabled=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div disabled=false 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div disabled=true 1`] = `
<div
  className="uu5-common-div uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Div disabled=true 3`] = `
<div
  className="uu5-common-div uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Div dynamic=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div dynamic=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div example docKit UU5.Bricks.Div render without crash 1`] = `
<div
  className="uu5-common-div"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is a DIV"
  />
</div>
`;

exports[`UU5.Bricks.Div fullTextSearchPriority=0 1`] = `
<div
  className="uu5-common-div uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div fullTextSearchPriority=0 2`] = `
<div
  className="uu5-common-div uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden=false 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden=true 1`] = `
<div
  className="uu5-common-div uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden=true 3`] = `
<div
  className="uu5-common-div uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div id="myId" 1`] = `
<div
  className="uu5-common-div"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div id="test-id" 1`] = `
<div
  className="uu5-common-div"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div ignoreHTML=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div ignoreHTML=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div mainAttrs=undefined 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div name="myName" 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div nestingLevel="box" 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div nestingLevel="inline" 1`] = `
<span
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div noPrint=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div noPrint=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div selected=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div selected=true 1`] = `
<div
  className="uu5-common-div uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div style={"margin":8} 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div textCorrector=false 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div textCorrector=true 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div tooltip="My Tooltip" 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
